--- a/src/Entrepids/Bundle/BraintreeBundle/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
+++ b/src/Entrepids/Bundle/BraintreeBundle/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
@@ -1,10 +1,12 @@
 {% block _entrepids_braintree_credit_card_payment_credit_card_cvv_widget %}
-	<span class="ttip__wrap">
-        <a href="javascript: void(0);" class="ttip__toggle">{{ 'entrepids.braintree.methods.whats_this'|trans }}</a>
-        <span class="ttip">
-            <span class="ttip__content">{{ 'entrepids.braintree.methods.tooltip'|trans|nl2br }}</span>
-        </span>
-    </span>
+	<a href="javascript: void(0);"
+       data-toggle="tooltip"
+       data-title="{{ 'entrepids.braintree.methods.tooltip'|trans }}"
+       data-html="true"
+       data-container="body"
+    >
+        {{ 'entrepids.braintree.methods.whats_this'|trans }}
+    </a>
 {% endblock %}
 
 {% block _entrepids_braintree_credit_card_widget %}
