--- a/src/Entrepids/Bundle/BraintreeBundle/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
+++ b/src/Entrepids/Bundle/BraintreeBundle/Resources/views/layouts/default/imports/oro_payment_method_options/form.html.twig
@@ -35,7 +35,7 @@
 	            		<fieldset class="{{ class_prefix }}__form__row">
         					<div class="{{ class_prefix }}__form__col form__col form__col_x12">    
         						<label for="card-number" class="label label--full required">{{ 'entrepids.braintree.credit_card.card_number.label'|trans }}</label>
-            				  	<div id="card-number" class="input input--full braintree-input" style="height: 40px"></div>
+            				  	<div id="card-number" class="input input-braintree-cc"></div>
 				  			</div>
     					</fieldset>
 					</div>
@@ -43,7 +43,7 @@
 	            		<fieldset class="{{ class_prefix }}__form__row">
         					<div class="{{ class_prefix }}__form__col form__col form__col_x12">
 				  				<label for="expiration-date" class="label label--full required">{{ 'entrepids.braintree.credit_card.expiration_date.label'|trans }}</label>
-				  				<div id="expiration-date" class="input input--short braintree-input" style="height: 40px"></div>
+				  				<div id="expiration-date" class="input input-braintree-expdate"></div>
 				  			</div>
     					</fieldset>
 					</div>
@@ -51,7 +51,7 @@
 	            		<fieldset class="{{ class_prefix }}__form__row">
         					<div class="{{ class_prefix }}__form__col form__col form__col_x12">	
 				  				<label for="cvv" class="label label--full required">{{ 'entrepids.braintree.credit_card.cvv2.label'|trans }}</label>
-				  				<div id="cvv" class="input input--short braintree-input" style="height: 40px"></div>{{ block('_entrepids_braintree_credit_card_payment_credit_card_cvv_widget') }}
+				  				<div id="cvv" class="input input-braintree-cvv"></div>{{ block('_entrepids_braintree_credit_card_payment_credit_card_cvv_widget') }}
 				  			</div>
     					</fieldset>
 					</div>	
